--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ image-uploader/node_modules
 image-vectoriser-next/node_modules
 media-server/node_modules
 image-upload-client
+image-vectoriser-next/.next
