Interim change: Progress bar added

--- a/image-vectoriser-next/package.json
+++ b/image-vectoriser-next/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@neplex/vectorizer": "^0.0.4",
+    "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@shadcn/ui": "^0.0.4",
     "@types/axios": "^0.14.0",
