--- a/image-vectoriser-next/package.json
+++ b/image-vectoriser-next/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "vitest"
   },
   "browser": {
     "child_process": false
@@ -17,10 +18,12 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@shadcn/ui": "^0.0.4",
     "@types/axios": "^0.14.0",
+    "@types/formidable": "^3.4.5",
     "@types/multer": "^1.4.11",
     "axios": "^1.7.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "formidable": "^3.5.1",
     "lucide-react": "^0.420.0",
     "multer": "^1.4.5-lts.1",
     "next": "14.2.5",
@@ -30,14 +33,21 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/supertest": "^6.0.2",
     "autoprefixer": "^10.4.19",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
+    "jest": "^29.7.0",
+    "node-mocks-http": "^1.15.1",
     "postcss": "^8.4.40",
+    "supertest": "^7.0.0",
     "tailwindcss": "^3.4.7",
-    "typescript": "^5"
+    "ts-jest": "^29.2.4",
+    "typescript": "^5",
+    "vitest": "^2.0.5"
   }
 }
