--- a/image-vectoriser-next/package.json
+++ b/image-vectoriser-next/package.json
@@ -22,11 +22,13 @@
     "@types/multer": "^1.4.11",
     "axios": "^1.7.3",
     "class-variance-authority": "^0.7.0",
+    "cloudinary": "^2.4.0",
     "clsx": "^2.1.1",
     "formidable": "^3.5.1",
     "lucide-react": "^0.420.0",
     "multer": "^1.4.5-lts.1",
     "next": "14.2.5",
+    "next-cloudinary": "^6.10.0",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.4.0",
