--- a/image-vectoriser-next/package.json
+++ b/image-vectoriser-next/package.json
@@ -30,6 +30,7 @@
     "next": "14.2.5",
     "next-cloudinary": "^6.10.0",
     "react": "^18",
+    "react-before-after-slider-component": "^1.1.8",
     "react-dom": "^18",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7"
